--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -27,6 +27,24 @@
           </div>
         </li>
         <li class="nav-item btn-group" *ngIf="(LoginStatus$ | async) as LoginStatus">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" *ngIf="(UserRole$ | async)=='Admin'">
+            Insurance
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" *ngIf="LoginStatus" [routerLink]='["/insurance/register"]'> Register</a>
+            <a class="dropdown-item" *ngIf="LoginStatus">Update</a>
+          </div>
+        </li>
+        <li class="nav-item btn-group" *ngIf="(LoginStatus$ | async) as LoginStatus">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" *ngIf="(UserRole$ | async)=='Admin'">
+            Assistant
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" *ngIf="LoginStatus" [routerLink]='["/assistant/register"]'> Register</a>
+            <a class="dropdown-item" *ngIf="LoginStatus">Update</a>
+          </div>
+        </li>
+        <li class="nav-item btn-group" *ngIf="(LoginStatus$ | async) as LoginStatus">
           <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" *ngIf="(UserName$ | async) as UserName">
             {{UserName}}
           </button>
